# RustyWeather

./: .gitignore  Cargo.toml
paper-display/: Cargo.toml
rusty-weather/: Cargo.toml
rusty-weather/.cargo/: config.toml
rusty-weather/src/: main.rs
weather-service/: Cargo.toml
weather-service/src/: lib.rs  weather.rs
