[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"




[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
esp-idf-hal = { git="https://github.com/esp-rs/esp-idf-hal"}
esp-idf-svc = { git="https://github.com/esp-rs/esp-idf-svc"}

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
epd-waveshare = "0.5.0"
smol = "1.2"
async-io = "=1.12"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"


[build-dependencies]
embuild = "0.31.1"